--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(wallpy2phone.jpg);
+        background-image: url(wallpy2.jpg);
     }
     .header-text{
         margin-top: 100%;
